Randomly generate conversions distributed around current time

--- a/chart.html
+++ b/chart.html
@@ -18,6 +18,9 @@
               color: "#ccc",
               count: 6
             }
+          },
+          vAxis: {
+            minValue: 0
           }
         };
 
